# openai-openapi-rs

./: .gitmodules  Cargo.toml  Makefile  README.md
.openapi-generator/: FILES
docs/: CreateAnswerRequest.md  CreateClassificationRequest.md  CreateCompletionRequest.md  CreateEditRequest.md  CreateEditResponse.md  CreateFineTuneRequest.md  OpenAiApi.md
examples/: basic.rs
src/apis/: configuration.rs  mod.rs  open_ai_api.rs
src/models/: create_answer_request.rs  create_answer_request_stop.rs  create_answer_response.rs  create_answer_response_selected_documents_inner.rs  create_classification_request.rs  create_classification_response.rs  create_classification_response_selected_examples_inner.rs  create_completion_request.rs  create_completion_request_prompt.rs  create_completion_request_stop.rs  create_completion_response.rs  create_completion_response_choices_inner.rs  create_completion_response_choices_inner_logprobs.rs  create_completion_response_usage.rs  create_edit_request.rs  create_edit_response.rs  create_embedding_request.rs  create_embedding_request_input.rs  create_embedding_response.rs  create_embedding_response_data_inner.rs  create_embedding_response_usage.rs  create_fine_tune_request.rs  create_image_request.rs  create_moderation_request.rs  create_moderation_request_input.rs  create_moderation_response.rs  create_moderation_response_results_inner.rs  create_moderation_response_results_inner_categories.rs  create_moderation_response_results_inner_category_scores.rs  create_search_request.rs  engine.rs  (+16 more)
template/: Cargo.mustache  lib.mustache
