[package]
name = "openai-openapi"
version = "0.1.0"
authors = ["Shuntaro Nishizawa <shun.shobon@gmail.com> (https://s2n.tech)"]
description = "APIs for sampling from and fine-tuning language models"
license = "MIT"
edition = "2021"
repository = "https://github.com/shun-shobon/openai-openapi-rs.git"
homepage = "https://github.com/shun-shobon/openai-openapi-rs"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_with = "^2.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde"] }
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
