[package]
name = "openai-openapi"
version = "0.1.0"
authors = ["Shuntaro Nishizawa <shun.shobon@gmail.com> (https://s2n.tech)"]
description = "APIs for sampling from and fine-tuning language models"
license = "MIT"
edition = "2021"
repository = "https://github.com/shun-shobon/openai-openapi-rs.git"
homepage = "https://github.com/shun-shobon/openai-openapi-rs"

[features]
default = ["rustls-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_with = "^2.0"
serde_json = "^1.0"
url = "^2.2"
reqwest = { version = "^0.11", features = ["json", "multipart"] }

[dev-dependencies]
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread"] }
